TestRepo2/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <formula>text( Brand__r.Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <formula>TEXT(Brand__r.Classification__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Brand__c</fullName>
        <formula>Brand__r.Generic_Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generic Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PackageConfiguration__c</fullName>
        <label>PackageConfiguration</label>
        <picklist>
            <picklistValues>
                <fullName>01x01 Pouch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01x01 STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01X02 BAG-IN-BOX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01x03 STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01x04 STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01x06 STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01x12 STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01x120 PET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01x120 STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01x24 PET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01x24 STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01x30 PET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01x48 PET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01x48 STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02x01 STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02x03 STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02x06 STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03x01 STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03x02 STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03x04 STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04x01 STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04x03 STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04x06 STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04x12 STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04x15 LIGHTWEIGHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05x01 STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06x01 GLASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06x01 LIGHTWEIGHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06x01 PET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06x01 STANDARD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PackageSize__c</fullName>
        <label>PackageSize</label>
        <picklist>
            <picklistValues>
                <fullName>.0186L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.05L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.07L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.094L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.103L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.118L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.1L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.2L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.355L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.35L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.375L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.5L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.75L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.7L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.946L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.98L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.0L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.14L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.75L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.46L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOT DEFINED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Brand__c</columns>
        <columns>Category__c</columns>
        <columns>Classification__c</columns>
        <columns>Generic_Brand__c</columns>
        <columns>PackageConfiguration__c</columns>
        <columns>PackageSize__c</columns>
        <columns>SKU__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>